tests/assembler/pass/test34.ial
function void main()
{
    register int{64} ints;
    register float32{3}(int, float64) fn;

    block entry
    {
    }
}
