tests/assembler/fail/test17.ial
function void main()
{
    register int{} ints;

    block entry
    {
    }
}
